concord_examples/tests/ui/removed_auth_secret_ref_alias.stderr
error: `auth.*` was removed in v2; use `secret.*`
  --> tests/ui/removed_auth_secret_ref_alias.rs:11:36
   |
11 |             credential key: ApiKey(auth.api_key)
   |                                    ^^^^
